--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v4
       - name: Snyk Test
-        uses: snyk/actions/test@v4
+        uses: snyk/actions/java@v1
         with:
           org: "dvirsegal96"
           project: "Dvir-Segal/frontend-maven-plugin"
