--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v4
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/jdk@master
+        uses: snyk/actions/java@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
