--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,14 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
-      # - name: Run Snyk to check for vulnerabilities
-      #   uses: snyk/actions/maven@master
-      #   env:
-      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      #   with:
-      #     command: monitor
-      #     json: true
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=dvir-segal
+            -Dsonar.projectKey=Dvir-Segal
 
       - name: Use cache
         uses: actions/cache@v4
