--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,23 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
-      #   env: 
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   with:
-      #     args: >
-      #       -Dsonar.organization=dvir-segal
-      #       -Dsonar.projectKey=Dvir-Segal_frontend-maven-plugin
-      #       -Dsonar.branch.name=master
+
+      # Set up JDK (if needed, adjust version as required)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adoptopenjdk'
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=dvir-segal
+            -Dsonar.projectKey=Dvir-Segal_frontend-maven-plugin
+            -Dsonar.branch.name=master
 
       - name: Use cache
         uses: actions/cache@v4
@@ -37,16 +45,6 @@ jobs:
         with:
           java-version: "11"
           distribution: temurin
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env: 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=dvir-segal
-            -Dsonar.projectKey=Dvir-Segal_frontend-maven-plugin
-            -Dsonar.branch.name=master
       
       - name: "Run Maven"
         shell: bash
