--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             -Dsonar.organization=dvir-segal
             -Dsonar.projectKey=Dvir-Segal_frontend-maven-plugin
             -Dsonar.branch.name=master
-            -Dsonar.java.binaries==**/src/**/*.java
+            -Dsonar.java.binaries==target/classes
 
       - name: Use cache
         uses: actions/cache@v4
